# rviz-plugins

./: README.md
ros/: .gitignore
ros/src/debug-tools/: CMakeLists.txt  package.xml  setup.py
ros/src/debug-tools/scripts/: pose_spiral
ros/src/initial_pose3d_tool/: CMakeLists.txt  package.xml  plugin_description.xml
ros/src/initial_pose3d_tool/sample/: sample.launch  sample.rviz
ros/src/initial_pose3d_tool/src/: initial_pose3d_tool.cpp  initial_pose3d_tool.hpp
ros/src/pose-history/: CMakeLists.txt  package.xml  plugin_description.xml
ros/src/pose-history/config/: test.rviz
ros/src/pose-history/launch/: test.launch
ros/src/pose-history/src/: pose_history_display.cpp  pose_history_display.hpp
ros/src/waypoint-editor/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
ros/src/waypoint-editor/config/: test.rviz
ros/src/waypoint-editor/launch/: test.launch
ros/src/waypoint-editor/src/: event_capture.cpp  event_capture.hpp  event_capture_client.cpp  event_capture_client.hpp  event_capture_server.cpp  event_capture_server.hpp  event_capture_tool.cpp  event_capture_tool.hpp  point_cloud_map.cpp  point_cloud_map.hpp  waypoint_editor.cpp  waypoint_editor.hpp  waypoint_editor_library.cpp  waypoint_editor_library.hpp  waypoint_editor_marker.cpp  waypoint_editor_marker.hpp  waypoint_editor_panel.cpp  waypoint_editor_panel.hpp
ros/src/waypoint-editor/src/types/: capture.hpp  geometry.hpp  waypoint.hpp
