<?xml version="1.0"?>
<package format="2">

  <name>waypoint-editor</name>
  <version>0.0.0</version>
  <description>The waypoint-editor package</description>
  <license>Apache 2.0</license>

  <maintainer email="isamu.takagi@tier4.jp">Isamu Takagi</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
